libs/image/brushengine/kis_paintop_settings.h
@@ -101,7 +101,7 @@ public:
      * Removes all the settings from the object while keeping the paintop id,
      * which is loaded to the object by the factory
      */
-    void resetSettings();
+    void resetSettings(const QStringList &preserveProperties = QStringList());
 
     /**
      * @return the node the paintop is working on.
